--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
+        "phpunit/dbunit": ">=1.3,<1.4",
         "phpspec/phpspec": "~2.1"
     },
     "autoload": {
